...
) {

    Column(
        modifier = modifier
    ) {
        TextFieldApp(
            modifier = Modifier.testTag("txtEmail"),
            stringResource(R.string.email),
            value = email,
            onValueChange = onEmailChange
        )
        TextFieldApp(
            modifier = Modifier.testTag("txtUsuario"),
            stringResource(R.string.usuario),
            value = usuario,
            onValueChange = onUsuarioChange
        )
        TextFieldApp(
            modifier = Modifier.testTag("txtCarrera"),
            stringResource(R.string.carrera),
            value = carrera,
            onValueChange = onCarreraChange
        )
        TextFieldContraApp(
            modifier = Modifier.testTag("txtContraseña"),
            stringResource(R.string.contrase_a),
            value = password,
            mostrarPassword = passwordVisible,
            click = onPasswordVisibleChange,
            onValueChange = onPasswordChange,
            icono = passwordIcon
        )
        TextFieldContraApp(
            modifier = Modifier.testTag("txtContraseña2"),
            stringResource(R.string.repetir_contrase_a),
            value = password2,
            mostrarPassword = passwordVisible,
            click = onPasswordVisibleChange,
            onValueChange = onPassword2Change,
            icono = password2Icon
...
        modifier = modifier
    ) {
        AppButton(
            stringResource(R.string.registrarse),
            onClick = onRegisterClick,
            enabled = !isLoading,
            modifier = Modifier.testTag("registerbutton")
        )
        AppTextButton(
            modifier = Modifier.testTag("volver_button"),
            stringResource(R.string.volver),
            onClick = onBackClick)
    }
...
