...
import com.example.tuprofe.ui.utils.Resena
import com.example.tuprofe.ui.utils.ReviewListSkeleton
import com.example.tuprofe.ui.utils.pressScaleEffect

@Composable
fun MainScreen(
    modifier: Modifier = Modifier.testTag("mainScreen"),
    onResenaClick: (String) -> Unit,
    onProfileClick: (Profesor) -> Unit,
    onUserClick: (String) -> Unit,
    mainViewModel: MainViewModel
) {
    val uiState by mainViewModel.uiState.collectAsState()
...
